--- a/order.html
+++ b/order.html
@@ -82,9 +82,9 @@
         margin-top: 40px; /* Adjusts the header position below the top bar */
     }
 
-     .hamburger {
-            display: none; /* Show by default */
-        }
+    .hamburger {
+    display: block; /* Show hamburger on mobile */
+}
 
  nav {
         display: flex;
@@ -308,7 +308,7 @@
     .nav-links a:last-child {
         border-bottom: none; /* Remove border for the last item */
     }
-}
+
 
 .hamburger {
     display: block; /* Show hamburger on mobile */
