--- a/order.html
+++ b/order.html
@@ -96,7 +96,7 @@
     }
 
     .logo img {
-        height: 50px;
+        height: 70Spx;
         border-radius: 50%;
         border: 3px solid rgba(0, 123, 255, 0.6);
         padding: 5px;
