--- a/services.html
+++ b/services.html
@@ -27,6 +27,27 @@
             backdrop-filter: blur(50px);
         }
 
+        
+
+
+ footer {
+    background-color: #333; /* Dark background */
+    color: #fff; /* White text */
+    padding: 20px; /* Padding */
+    text-align: center; /* Center text */
+}
+
+.footer-content p {
+    margin: 5px 0; /* Space between paragraphs */
+}
+
+.footer-bottom {
+    border-top: 1px solid #444; /* Top border */
+    margin-top: 10px; /* Margin above */
+    padding-top: 10px; /* Padding above */
+}
+   
+
         nav {
             display: flex;
             justify-content: space-between;
@@ -396,6 +417,17 @@
     </main>
     <a href="https://api.whatsapp.com/send/?phone=442032893891&text&type=phone_number&app_absent=0" class="whatsapp-float">
         <img src="images/whatsapp-removebg-preview.png" class="whatsapp-icon">
+ <footer>
+        <div class="footer-content">
+            <p>Contact Us: <a href="mailto:info@example.com">inscribe@gmail.com</a></p>
+            <p>Since 2011</p>
+        </div>
+        <div class="footer-bottom">
+            <p>&copy; 2011 The Inscribeco. All rights reserved.</p>
+        </div>
+    </footer>
+    
+
 
     <script>
         // Smooth scrolling for navigation links
