--- a/pricing.html
+++ b/pricing.html
@@ -364,7 +364,7 @@
         </section>
     </main>
     <a href="https://api.whatsapp.com/send/?phone=442032893891&text&type=phone_number&app_absent=0" class="whatsapp-float">
-        <img src="images/whatsapp-removebg-preview.png" class="whatsapp-icon">
+        <img src="images/whatsapp-removebg-preview.png" class="whatsapp-icon"></a>
 
          <footer>
         <div class="footer-content">
