--- a/services.html
+++ b/services.html
@@ -27,6 +27,10 @@
             backdrop-filter: blur(50px);
         }
 
+        header, nav, .top-bar, .services-container {
+    max-width: 100%; /* Prevent exceeding the screen width */
+    box-sizing: border-box; /* Include padding and borders in element width */
+}
         
 
 
