--- a/index.html
+++ b/index.html
@@ -469,6 +469,15 @@
     .sample {
         width: calc(50% - 2rem); /* Two in a row on tablets */
     }
+         .dropdown-menu {
+    padding: 10px 20px;
+  }
+  
+  .dropdown-menu a {
+    padding: 12px 20px;
+    font-size: 16px; /* Increase the font size for better readability */
+  }
+}
 
        .navbar-collapse {
     display: flex;
