--- a/index.html
+++ b/index.html
@@ -469,65 +469,44 @@
     .sample {
         width: calc(50% - 2rem); /* Two in a row on tablets */
     }
-         .dropdown-menu {
-    padding: 10px 20px;
-  }
-  
-  .dropdown-menu a {
-    padding: 12px 20px;
-    font-size: 16px; /* Increase the font size for better readability */
-  }
-}
+ 
 
-       .navbar-collapse {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-  }
+   
 
-  .navbar-collapse .nav-item {
-    margin-bottom: 10px;
-  }
-
-  .navbar-collapse .nav-link {
-    font-size: 18px; /* Larger font size for mobile */
-    padding: 10px 15px;
-    text-align: left;
-  }
-}
-    .nav-links {
-        display: none; /* Hide nav links by default on mobile */
-        flex-direction: column; /* Stack links vertically */
-        position: absolute; /* Positioning for dropdown */
-        top: 60px; /* Adjust to position under the nav */
-        right: 0;
-        background-color: #34495e; /* Darker background for contrast */
-        width: 100%; /* Full width */
-        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3); /* More pronounced shadow */
-        border-radius: 10px; /* More rounded corners */
-        z-index: 1000; /* Ensure it appears above other elements */
-        padding: 1rem; /* Padding around the dropdown for better spacing */
+   .dropdown-menu {
+        padding: 10px 20px;
     }
 
-    .nav-links.show {
-        display: flex; /* Show nav links when hamburger is clicked */
+    .dropdown-menu a {
+        padding: 12px 20px;
+        font-size: 16px;
+    }
+
+    .navbar-collapse {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    .nav-links {
+        position: absolute;
+        top: 60px;
+        right: 0;
+        width: 100%;
+        background-color: #34495e;
+        padding: 1rem;
+        z-index: 1000;
     }
 
     .nav-links a {
-        padding: 1rem 1.5rem; /* Increased padding for better spacing */
-        margin: 0.75rem 0; /* Increased margin to separate each link box */
-        background-color: #2980b9; /* Background color for each link box */
-        border-radius: 8px; /* Rounded corners for each link box */
-        font-size: 1.2rem; /* Larger font size for better readability */
+        padding: 1rem 1.5rem;
+        margin: 0.75rem 0;
+        font-size: 1.2rem;
         text-align: center;
-        color: #ffffff; /* Light text color for contrast */
-        text-decoration: none; /* Remove underline */
-        transition: background-color 0.3s ease, color 0.3s ease; /* Smooth transition */
     }
 
-    .nav-links a:hover {
-        background-color: #3498db; /* Attractive hover background */
-        color: #ffffff; /* Maintain text color on hover */
+    .nav-links.show {
+        display: flex;
     }
 
 
@@ -749,7 +728,6 @@ nav {
         const featuresSection = document.getElementById('features');
         featuresSection.scrollIntoView({ behavior: 'smooth' });
     });
-
    
   
     
