--- a/index.html
+++ b/index.html
@@ -59,9 +59,30 @@
         margin-top: 40px; /* Adjusts the header position below the top bar */
     }
 
-     .hamburger {
-            display: none; /* Show by default */
-        }
+     .menu-icon {
+      display: none;
+      cursor: pointer;
+      font-size: 30px;
+    }
+
+         .nav-menu {
+      list-style: none;
+      display: flex;
+      gap: 20px;
+    }
+
+    /* Links style */
+    .nav-menu li {
+      margin: 10px 0;
+    }
+
+    .nav-menu li a {
+      text-decoration: none;
+      color: white;
+      padding: 10px;
+      font-size: 18px;
+    }
+
 
  nav {
         display: flex;
@@ -471,57 +492,40 @@
     }
  
 
-   
-
-   .dropdown-menu {
-        padding: 10px 20px;
-    }
-
-    .dropdown-menu a {
-        padding: 12px 20px;
-        font-size: 16px;
-    }
-
-    .navbar-collapse {
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
-    }
-
-    .nav-links {
+    .nav-menu {
+        display: none;
         position: absolute;
         top: 60px;
-        right: 0;
+        left: 0;
         width: 100%;
-        background-color: #34495e;
-        padding: 1rem;
-        z-index: 1000;
-    }
+        background-color: #333;
+        flex-direction: column;
+        align-items: center;
+        z-index: 1;
+      }
 
-    .nav-links a {
-        padding: 1rem 1.5rem;
-        margin: 0.75rem 0;
-        font-size: 1.2rem;
+      .menu-icon {
+        display: block;
+      }
+
+      .nav-menu li {
+        width: 100%;
         text-align: center;
-    }
+      }
 
-    .nav-links.show {
+      .nav-menu.show {
         display: flex;
-    }
+      }
+
+      .nav-menu li a {
+        font-size: 22px;
+        padding: 20px;
+      }
+
+  
 
 
 
-.hamburger {
-    display: block; /* Show hamburger on mobile */
-}
-
-.nav-links.active {
-    display: flex;
-}
-
-nav {
-    justify-content: space-between;
-}
 
 .hero h1 {
     font-size: 2rem; /* Adjusted font size */
