--- a/index.html
+++ b/index.html
@@ -59,30 +59,11 @@
         margin-top: 40px; /* Adjusts the header position below the top bar */
     }
 
-     .menu-icon {
-      display: none;
-      cursor: pointer;
-      font-size: 30px;
-    }
+   
 
-         .nav-menu {
-      list-style: none;
-      display: flex;
-      gap: 20px;
-    }
-
-    /* Links style */
-    .nav-menu li {
-      margin: 10px 0;
-    }
-
-    .nav-menu li a {
-      text-decoration: none;
-      color: white;
-      padding: 10px;
-      font-size: 18px;
-    }
-
+   .hamburger {
+            display: none; /* Show by default */
+        }
 
  nav {
         display: flex;
@@ -123,7 +104,6 @@
     background-color: rgba(0, 123, 255, 0.6);
     transform: scale(1.1);
 }
-
 
 
 
@@ -492,35 +472,60 @@
     }
  
 
-    .nav-menu {
-        display: none;
-        position: absolute;
-        top: 60px;
-        left: 0;
-        width: 100%;
-        background-color: #333;
-        flex-direction: column;
-        align-items: center;
-        z-index: 1;
-      }
+    
+      
 
-      .menu-icon {
-        display: block;
-      }
+    .nav-links {
+        display: none; /* Hide nav links by default on mobile */
+        flex-direction: column; /* Stack links vertically */
+        position: absolute; /* Positioning for dropdown */
+        top: 60px; /* Adjust to position under the nav */
+        right: 0;
+        background-color: #34495e; /* Darker background for contrast */
+        width: 100%; /* Full width */
+        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3); /* More pronounced shadow */
+        border-radius: 10px; /* More rounded corners */
+        z-index: 1000; /* Ensure it appears above other elements */
+        padding: 1rem; /* Padding around the dropdown for better spacing */
+    }
 
-      .nav-menu li {
-        width: 100%;
+    .nav-links.show {
+        display: flex; /* Show nav links when hamburger is clicked */
+    }
+
+    .nav-links a {
+        padding: 1rem 1.5rem; /* Increased padding for better spacing */
+        margin: 0.75rem 0; /* Increased margin to separate each link box */
+        background-color: #2980b9; /* Background color for each link box */
+        border-radius: 8px; /* Rounded corners for each link box */
+        font-size: 1.2rem; /* Larger font size for better readability */
         text-align: center;
-      }
+        color: #ffffff; /* Light text color for contrast */
+        text-decoration: none; /* Remove underline */
+        transition: background-color 0.3s ease, color 0.3s ease; /* Smooth transition */
+    }
 
-      .nav-menu.show {
-        display: flex;
-      }
+    .nav-links a:hover {
+        background-color: #3498db; /* Attractive hover background */
+        color: #ffffff; /* Maintain text color on hover */
+    }
 
-      .nav-menu li a {
-        font-size: 22px;
-        padding: 20px;
-      }
+    .nav-links a:last-child {
+        border-bottom: none; /* Remove border for the last item */
+    }
+
+.hamburger {
+    display: block; /* Show hamburger on mobile */
+}
+
+.nav-links.active {
+    display: flex;
+}
+
+nav {
+    justify-content: space-between;
+}
+
 
   
 
