--- a/index.html
+++ b/index.html
@@ -477,39 +477,42 @@
       
 
     .nav-links {
-        display: none; /* Hide nav links by default on mobile */
-        flex-direction: column; /* Stack links vertically */
-        position: absolute; /* Positioning for dropdown */
-        top: 10px; /* Adjust to position under the nav */
-        right: 0;
-        background-color: #34495e; /* Darker background for contrast */
-        width: 100%; /* Full width */
-        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3); /* More pronounced shadow */
-        border-radius: 50px; /* More rounded corners */
-        z-index: 100;/* Ensure it appears above other elements */
-        padding: 1rem; /* Padding around the dropdown for better spacing */
-    }
+    display: none; /* Initially hidden */
+    flex-direction: column; /* Stack links vertically */
+    position: absolute; /* Dropdown positioning */
+    top: 50px; /* Adjust to sit below the nav bar */
+    right: 0;
+    background-color: #34495e; /* Darker background for contrast */
+    width: 100%; /* Full width on mobile */
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3); /* More pronounced shadow */
+    border-radius: 20px; /* Softer rounded corners */
+    z-index: 100; /* Appear above other elements */
+    padding: 1rem; /* Spacing around the dropdown */
+    transition: all 0.3s ease; /* Smooth open/close */
+}
+
 
     .nav-links.show {
         display: flex; /* Show nav links when hamburger is clicked */
     }
 
-    .nav-links a {
-        padding: 1rem 1.5rem; /* Increased padding for better spacing */
-        margin: 1rem 0; /* Increased margin to separate each link box */
-        background-color: #2980b9; /* Background color for each link box */
-        border-radius: 8px; /* Rounded corners for each link box */
-        font-size: 1.2rem; /* Larger font size for better readability */
-        text-align: center;
-        color: #ffffff; /* Light text color for contrast */
-        text-decoration: none; /* Remove underline */
-        transition: background-color 0.3s ease, color 0.3s ease; /* Smooth transition */
-    }
+    nav-links a {
+    padding: 1rem 1.5rem; /* Increased padding */
+    margin: 0.5rem 0; /* Adjust spacing between links */
+    background-color: #2980b9; /* Background color for links */
+    border-radius: 8px; /* Rounded corners for links */
+    font-size: 1.2rem; /* Larger font for readability */
+    text-align: center;
+    color: #ffffff; /* White text */
+    text-decoration: none; /* Remove underline */
+    transition: background-color 0.3s ease, color 0.3s ease;
+}
 
-    .nav-links a:hover {
-        background-color: #3498db; /* Attractive hover background */
-        color: #ffffff; /* Maintain text color on hover */
-    }
+/* Hover effects */
+.nav-links a:hover {
+    background-color: #1f6396; /* Darker hover color */
+    color: #ecf0f1; /* Lighter text on hover */
+}
 
     .nav-links a:last-child {
         border-bottom: none; /* Remove border for the last item */
@@ -725,10 +728,14 @@ nav {
 
 <script>
     // Toggle the hamburger menu
-    document.getElementById('hamburger').addEventListener('click', function () {
-        const navLinks = document.getElementById('nav-links');
-        navLinks.classList.toggle('show'); // Toggle the dropdown menu
-    });
+    document.getElementById('hamburger').addEventListener('click', function() {
+    const navLinks = document.querySelector('.nav-links');
+    if (navLinks.style.display === "flex") {
+        navLinks.style.display = "none";
+    } else {
+        navLinks.style.display = "flex";
+    }
+});
 
     // Smooth scrolling for the Learn More button
     document.getElementById('learnMoreButton').addEventListener('click', function () {
