--- a/index.html
+++ b/index.html
@@ -628,7 +628,7 @@ nav {
         <div class="pricing-card">
             <h3>Normal Delivery</h3>
             <ul>
-                <li>USD: $20 per page</li>
+                <li>USD: $10 per 1000 words </li>
                 <li>GBP: £15 per page</li>
                 <li>EUR: €18 per page</li>
             </ul>
@@ -676,7 +676,7 @@ nav {
             <h3>Plagiarism Free</h3>
         </div>
         <div class="feature">
-            <img src="images/s.jpeg" alt="Quality Work">
+            <img src="images/preview.png" alt="Quality Work">
             <h3>Quality Work</h3>
         </div>
         <div class="feature">
