--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
 .sample p {
     font-size: 1rem;
     color: #666;
-     text-align: justify;/* Dark grey for text */
+     /* Dark grey for text */
 }
         .download-link {
     display: inline-block; /* Allows padding and margin */
@@ -478,7 +478,7 @@
     display: none; /* Initially hidden */
     flex-direction: column; /* Stack links vertically */
     position: absolute; /* Dropdown positioning */
-    top: 70px; /* Adjust to sit below the nav bar with extra space */
+    top: 100px; /* Adjust to sit below the nav bar with extra space */
     right: 0;
     background-color: #34495e; /* Darker background for contrast */
     width: 100%; /* Full width on mobile */
@@ -494,7 +494,7 @@
     margin: 1rem 0; /* Increased margin for more space between links */
     background-color: #2980b9; /* Background color for links */
     border-radius: 8px; /* Rounded corners for links */
-    font-size: 1.2rem; /* Larger font for readability */
+    font-size: 5rem; /* Larger font for readability */
     text-align: center;
     color: #ffffff; /* White text */
     text-decoration: none; /* Remove underline */
