--- a/pricing.html
+++ b/pricing.html
@@ -170,9 +170,10 @@
         }
 
         .pricing-card {
-            background-color: #fff; /* White background for cards */
-            padding: 3rem; /* Increased padding for larger cards */
-            width: 350px; /* Increased width for better layout */
+            background-color: #fff;
+    padding: 2rem; /* Adjusted padding */
+    width: calc(100% - 2rem); /* Adjust to fit in mobile */
+    max-width: 350px; /* Limit max width for larger screens */
             border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
             transition: transform 0.3s ease;
@@ -268,6 +269,17 @@
 
         @media (max-width: 768px) {
 
+             .pricing-container {
+        flex-direction: column; /* Stack cards vertically on mobile */
+        align-items: center; /* Center the cards */
+    }
+
+    .nav-links {
+        position: fixed; /* Keep the nav links fixed in place */
+        top: 60px; /* Adjust to fit under the top bar */
+        right: 0;
+        width: 100%; /* Full width */
+    }
             .sample {
         width: calc(50% - 2rem); /* Two in a row on tablets */
     }
