--- a/services.html
+++ b/services.html
@@ -155,6 +155,7 @@
             text-align: center;
             padding: 0 2rem;
             margin-top: 0;
+            width:100%;
         }
 
         .services-hero-content {
