--- a/services.html
+++ b/services.html
@@ -14,6 +14,7 @@
             transition: background-color 0.3s ease;
             line-height: 1.6;
             overflow-x: hidden;
+            width:100%;
         }
 
         header {
