--- a/services.html
+++ b/services.html
@@ -232,6 +232,8 @@
             padding: 4rem 1rem;
             background-color: #f5f5f5;
             text-align: center;
+            width:100%;
+            
         }
 
         .service-details h2 {
@@ -454,7 +456,7 @@ nav {
                     <h3>Proofreading & Editing</h3>
                     <p>Click to learn more</p>
                 </div>
-                <div class="service" onclick="scrollToSection('ppt-design')">
+                <div class="service" onclick="scrollToSection('ppt-creation')">
                     <img src="images/ppt-removebg-preview.png" alt="PPT Design" class="service-icon">
                     <h3>PPT Design</h3>
                     <p>Click to learn more</p>
