--- a/services.html
+++ b/services.html
@@ -252,6 +252,10 @@
             margin-bottom: 1.5rem;
         }
 
+        .service-detail {
+            width : 100%;
+        }
+
         .whatsapp-float {
             position: fixed;
             width: 60px;
