--- a/services.html
+++ b/services.html
@@ -252,9 +252,7 @@
             margin-bottom: 1.5rem;
         }
 
-        .service-detail {
-            width : 100%;
-        }
+       
 
         .whatsapp-float {
             position: fixed;
@@ -437,7 +435,7 @@ nav {
             </div>
         </section>
 
-        <section class="services-detail" id="services">
+        <section class="services-details" id="services">
             <h2>What We Offer</h2>
             <div class="services-container">
                 <div class="service" onclick="scrollToSection('essay-writing')">
