--- a/Sample.html
+++ b/Sample.html
@@ -452,24 +452,23 @@ nav {
         </div>
     </footer>
     <script>
-        // Function to show the overlay with full paper text
-        function showOverlay(title, text) {
-            document.getElementById('sampleTitle').innerText = title;
-            document.getElementById('sampleText').innerText = text;
-            document.getElementById('sampleOverlay').style.display = 'flex';
-        }
+    // Function to show the overlay with full paper text
+    function showOverlay(title, text) {
+        document.getElementById('sampleTitle').innerText = title;
+        document.getElementById('sampleText').innerText = text;
+        document.getElementById('sampleOverlay').style.display = 'flex';
+    }
 
-        // Function to close the overlay
-        function closeOverlay() {
-            document.getElementById('sampleOverlay').style.display = 'none';
+    // Function to close the overlay
+    function closeOverlay() {
+        document.getElementById('sampleOverlay').style.display = 'none';
+    }
 
-   
-               document.getElementById('hamburger').addEventListener('click', function () {
+    // Event listener for the hamburger menu
+    document.getElementById('hamburger').addEventListener('click', function () {
         const navLinks = document.getElementById('nav-links');
         navLinks.classList.toggle('show'); // Toggle the dropdown menu
     });
-
-        }
-    </script>
+</script>
 </body>
 </html>
