--- a/services.html
+++ b/services.html
@@ -541,30 +541,30 @@ nav {
 
 
     <script>
-        // Smooth scrolling for navigation links
-        document.querySelectorAll('a[href^="#"]').forEach(anchor => {
-            anchor.addEventListener('click', function(e) {
-                e.preventDefault();
-                document.querySelector(this.getAttribute('href')).scrollIntoView({
-                    behavior: 'smooth'
-                });
-            });
-        });
-
-        
-
-        // Scroll to section function
-        function scrollToSection(sectionId) {
-            document.getElementById(sectionId).scrollIntoView({
+    // Smooth scrolling for navigation links
+    document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+        anchor.addEventListener('click', function(e) {
+            e.preventDefault();
+            document.querySelector(this.getAttribute('href')).scrollIntoView({
                 behavior: 'smooth'
             });
+        });
+    });
 
-                document.getElementById('hamburger').addEventListener('click', function () {
+    // Scroll to section function
+    function scrollToSection(sectionId) {
+        document.getElementById(sectionId).scrollIntoView({
+            behavior: 'smooth'
+        });
+    }
+
+    // Event listener for the hamburger menu
+    document.getElementById('hamburger').addEventListener('click', function () {
         const navLinks = document.getElementById('nav-links');
         navLinks.classList.toggle('show'); // Toggle the dropdown menu
     });
+</script>
 
-        }
-    </script>
+  
 </body>
 </html>
