--- a/services.html
+++ b/services.html
@@ -539,29 +539,30 @@ nav {
     </footer>
     
 
-
-    <script>
-    // Smooth scrolling for navigation links
-    document.querySelectorAll('a[href^="#"]').forEach(anchor => {
-        anchor.addEventListener('click', function(e) {
-            e.preventDefault();
-            document.querySelector(this.getAttribute('href')).scrollIntoView({
-                behavior: 'smooth'
+<script>
+    document.addEventListener("DOMContentLoaded", function() {
+        // Smooth scrolling for navigation links
+        document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+            anchor.addEventListener('click', function(e) {
+                e.preventDefault();
+                document.querySelector(this.getAttribute('href')).scrollIntoView({
+                    behavior: 'smooth'
+                });
             });
         });
-    });
 
-    // Scroll to section function
-    function scrollToSection(sectionId) {
-        document.getElementById(sectionId).scrollIntoView({
-            behavior: 'smooth'
+        // Scroll to section function
+        function scrollToSection(sectionId) {
+            document.getElementById(sectionId).scrollIntoView({
+                behavior: 'smooth'
+            });
+        }
+
+        // Event listener for the hamburger menu
+        document.getElementById('hamburger').addEventListener('click', function () {
+            const navLinks = document.getElementById('nav-links');
+            navLinks.classList.toggle('show'); // Toggle the dropdown menu
         });
-    }
-
-    // Event listener for the hamburger menu
-    document.getElementById('hamburger').addEventListener('click', function () {
-        const navLinks = document.getElementById('nav-links');
-        navLinks.classList.toggle('show'); // Toggle the dropdown menu
     });
 </script>
 
