--- a/services.html
+++ b/services.html
@@ -315,19 +315,30 @@
         width: calc(50% - 2rem); /* Two in a row on tablets */
     }
 
-    .nav-links {
+
+
+   .nav-links {
     display: none; /* Hide nav links by default on mobile */
     flex-direction: column; /* Stack links vertically */
     position: absolute; /* Positioning for dropdown */
     top: 60px; /* Adjust to position under the nav */
     right: 0;
-    background-color: #34495e; /* Darker background for contrast */
+    background-color: #2c3e50; /* Darker background for contrast */
     width: 100%; /* Full width */
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3); /* More pronounced shadow */
     border-radius: 10px; /* More rounded corners */
     z-index: 1000; /* Ensure it appears above other elements */
     padding: 1rem; /* Padding around the dropdown for better spacing */
     margin-top: 0.5rem; /* Space above the dropdown */
+    opacity: 0; /* Start hidden */
+    visibility: hidden; /* Prevent interaction when hidden */
+    transition: opacity 0.3s ease, visibility 0.3s ease; /* Smooth transition */
+}
+
+.nav-links.show {
+    display: flex; /* Show nav links when hamburger is clicked */
+    opacity: 1; /* Fade in */
+    visibility: visible; /* Allow interaction */
 }
 
 .nav-links a {
@@ -346,17 +357,7 @@
     background-color: #3498db; /* Attractive hover background */
     color: #ffffff; /* Maintain text color on hover */
 }
-    .nav-links.show {
-        display: flex; /* Show nav links when hamburger is clicked */
-    }
 
-   
-
-   
-
-    .nav-links a:last-child {
-        border-bottom: none; /* Remove border for the last item */
-    }
 
 .hamburger {
     display: block; /* Show hamburger on mobile */
@@ -562,10 +563,9 @@ nav {
             });
         }
 
-       document.getElementById('hamburger').addEventListener('click', function () {
+    document.getElementById('hamburger').addEventListener('click', function () {
     const navLinks = document.getElementById('nav-links');
     navLinks.classList.toggle('show'); // Toggle the dropdown menu
-    navLinks.classList.toggle('active'); // Optional: To handle any styles you may need
 });
     });
 </script>
