--- a/services.html
+++ b/services.html
@@ -310,25 +310,18 @@
         @media (max-width: 768px) {
 
 
-
-          .sample {
-        width: calc(50% - 2rem); /* Two in a row on tablets */
-    }
-
-
-
-   .nav-links {
+.nav-links {
     display: none; /* Hide nav links by default on mobile */
     flex-direction: column; /* Stack links vertically */
     position: absolute; /* Positioning for dropdown */
-    top: 50px; /* Adjust to position under the nav */
+    top: 60px; /* Position under the nav */
     right: 0;
-    background-color: #2c3e50; /* Darker background for contrast */
+    background-color: #34495e; /* Darker background for contrast */
     width: 100%; /* Full width */
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3); /* More pronounced shadow */
-    border-radius: 10px; /* More rounded corners */
+    border-radius: 10px; /* Rounded corners */
     z-index: 1000; /* Ensure it appears above other elements */
-    padding: 2rem; /* Padding around the dropdown for better spacing */
+    padding: 1rem; /* Padding around the dropdown for better spacing */
     margin-top: 0.5rem; /* Space above the dropdown */
     opacity: 0; /* Start hidden */
     visibility: hidden; /* Prevent interaction when hidden */
@@ -341,6 +334,7 @@
     visibility: visible; /* Allow interaction */
 }
 
+/* Styles for nav links */
 .nav-links a {
     padding: 1rem 1.5rem; /* Increased padding for better spacing */
     margin: 0.5rem 0; /* Space between each link */
@@ -358,10 +352,14 @@
     color: #ffffff; /* Maintain text color on hover */
 }
 
-
+/* Hamburger icon styles */
 .hamburger {
     display: block; /* Show hamburger on mobile */
+    cursor: pointer; /* Pointer cursor for better UX */
+    font-size: 1.5rem; /* Increase size for better visibility */
 }
+
+
 
 .nav-links.active {
     display: flex;
