--- a/services.html
+++ b/services.html
@@ -311,54 +311,62 @@
 
 
 .nav-links {
-    display: none; /* Hide nav links by default on mobile */
+    display: none; /* Initially hidden */
     flex-direction: column; /* Stack links vertically */
-    position: absolute; /* Positioning for dropdown */
-    top: 60px; /* Position under the nav */
+    position: absolute; /* Dropdown positioning */
+    top: 60px; /* Space below the nav bar */
     right: 0;
-    background-color: #34495e; /* Darker background for contrast */
-    width: 100%; /* Full width */
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3); /* More pronounced shadow */
-    border-radius: 10px; /* Rounded corners */
-    z-index: 1000; /* Ensure it appears above other elements */
-    padding: 1rem; /* Padding around the dropdown for better spacing */
-    margin-top: 0.5rem; /* Space above the dropdown */
-    opacity: 0; /* Start hidden */
-    visibility: hidden; /* Prevent interaction when hidden */
-    transition: opacity 0.3s ease, visibility 0.3s ease; /* Smooth transition */
+    left: 0; /* Full width */
+    background-color: #2c3e50; /* Dark background for contrast */
+    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.5); /* Softer shadow for depth */
+    border-radius: 8px; /* Less rounded corners */
+    z-index: 100; /* Appear above other elements */
+    padding: 1rem; /* Padding around the dropdown */
+    transition: all 0.3s ease; /* Smooth open/close */
 }
 
-.nav-links.show {
-    display: flex; /* Show nav links when hamburger is clicked */
-    opacity: 1; /* Fade in */
-    visibility: visible; /* Allow interaction */
-}
-
-/* Styles for nav links */
 .nav-links a {
-    padding: 1rem 1.5rem; /* Increased padding for better spacing */
-    margin: 0.5rem 0; /* Space between each link */
-    background-color: #2980b9; /* Background color for each link box */
-    border-radius: 8px; /* Rounded corners for each link box */
-    font-size: 1.2rem; /* Larger font size for better readability */
+    padding: 1.5rem; /* Increased padding for larger clickable area */
+    margin: 0.5rem 0; /* Slight margin to separate buttons */
+    background-color: #2980b9; /* Background color for links */
+    border-radius: 5px; /* Subtle rounding for links */
+    font-size: 1.5rem; /* Reasonable font size for readability */
     text-align: center;
-    color: #ffffff; /* Light text color for contrast */
+    color: #ffffff; /* White text */
     text-decoration: none; /* Remove underline */
-    transition: background-color 0.3s ease, color 0.3s ease; /* Smooth transition */
+    transition: background-color 0.3s ease, transform 0.3s ease; /* Smooth transitions */
+    width: calc(100% - 1rem); /* Make buttons full width minus margin */
+    box-sizing: border-box; /* Include padding and border in element's total width */
 }
 
+/* Hover effects */
 .nav-links a:hover {
-    background-color: #3498db; /* Attractive hover background */
-    color: #ffffff; /* Maintain text color on hover */
+    background-color: #1f6396; /* Darker hover color */
+    color: #ecf0f1; /* Lighter text on hover */
+    transform: scale(1.05); /* Slightly increase size on hover */
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3); /* Shadow on hover for depth */
 }
+    
 
-/* Hamburger icon styles */
+
+    .nav-links.show {
+        display: flex; /* Show nav links when hamburger is clicked */
+    }
+
+
+    
+
 .hamburger {
     display: block; /* Show hamburger on mobile */
-    cursor: pointer; /* Pointer cursor for better UX */
-    font-size: 1.5rem; /* Increase size for better visibility */
 }
-  
+
+.nav-links.active {
+    display: flex;
+}
+
+nav {
+    justify-content: space-between;
+}
 
 
             .services-hero h1 {
