--- a/index.html
+++ b/index.html
@@ -818,7 +818,7 @@
 
         // Smooth scrolling for the Learn More button
         document.getElementById('learnMoreButton').addEventListener('click', function () {
-            const featuresSection = document.getElementById('features');
+            const featuresSection = document.getElementById('samples');
             featuresSection.scrollIntoView({ behavior: 'smooth' });
         });
 
