--- a/pricing.html
+++ b/pricing.html
@@ -281,50 +281,97 @@
         width: 100%; /* Full width */
     }
 
-   
+   You said:
+    .sample {
+                width: calc(50% - 2rem);
+                /* Two in a row on tablets */
+            }
 
-    .nav-links {
-        display: none; /* Hide nav links by default on mobile */
-        flex-direction: column; /* Stack links vertically */
-        position: absolute; /* Positioning for dropdown */
-        top: 60px; /* Adjust to position under the nav */
-        right: 0;
-        background-color: #34495e; /* Darker background for contrast */
-        width: 100%; /* Full width */
-        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3); /* More pronounced shadow */
-        border-radius: 10px; /* More rounded corners */
-        z-index: 1000; /* Ensure it appears above other elements */
-        padding: 1rem; /* Padding around the dropdown for better spacing */
-    }
+            .nav-links {
+                display: none;
+                /* Initially hidden */
+                flex-direction: column;
+                /* Stack links vertically */
+                position: absolute;
+                /* Dropdown positioning */
+                top: 80px;
+                /* Space below the nav bar */
+                right: 0;
+                left: 0;
+                /* Full width */
+                background-color: #2c3e50;
+                /* Dark background for contrast */
+                box-shadow: 0 4px 20px rgba(0, 0, 0, 0.5);
+                /* Softer shadow for depth */
+                border-radius: 8px;
+                /* Less rounded corners */
+                z-index: 100;
+                /* Appear above other elements */
+                padding: 0.5rem;
+                /* Padding around the dropdown */
+                transition: all 0.3s ease;
+                /* Smooth open/close */
 
-    .nav-links.show {
-        display: flex; /* Show nav links when hamburger is clicked */
-    }
+                /* ####### New Code ########## */
+                /* for make list in a container */
+                contain: content;
+                /* ########################### */
+            }
 
-    .nav-links a {
-        padding: 1rem 1.5rem; /* Increased padding for better spacing */
-        margin: 0.75rem 0; /* Increased margin to separate each link box */
-        background-color: #2980b9; /* Background color for each link box */
-        border-radius: 8px; /* Rounded corners for each link box */
-        font-size: 1.2rem; /* Larger font size for better readability */
-        text-align: center;
-        color: #ffffff; /* Light text color for contrast */
-        text-decoration: none; /* Remove underline */
-        transition: background-color 0.3s ease, color 0.3s ease; /* Smooth transition */
-    }
+            /* ####### New Code ########## */
+            /* for proper visibilty of list items */
+            .nav-links li {
+                display: flex;
+                contain: content;
+            }
 
-    .nav-links a:hover {
-        background-color: #3498db; /* Attractive hover background */
-        color: #ffffff; /* Maintain text color on hover */
-    }
+            /* ########################### */
 
-    .nav-links a:last-child {
-        border-bottom: none; /* Remove border for the last item */
-    }
+            .nav-links a {
+                padding: 1.5rem;
+                /* Increased padding for larger clickable area */
+                margin: 0.5rem 0;
+                /* Slight margin to separate buttons */
+                background-color: #2980b9;
+                /* Background color for links */
+                border-radius: 5px;
+                /* Subtle rounding for links */
+                font-size: 1.25rem;
+                /* Reasonable font size for readability */
+                text-align: center;
+                color: #ffffff;
+                /* White text */
+                text-decoration: none;
+                /* Remove underline */
+                transition: background-color 0.3s ease, transform 0.3s ease;
+                /* Smooth transitions */
+                width: calc(100% - 1rem);
+                /* Make buttons full width minus margin */
+                box-sizing: border-box;
+                /* Include padding and border in element's total width */
+            }
 
-.hamburger {
-    display: block; /* Show hamburger on mobile */
-}
+            /* Hover effects */
+            .nav-links a:hover {
+                background-color: #1f6396;
+                /* Darker hover color */
+                color: #ecf0f1;
+                /* Lighter text on hover */
+                transform: scale(1.05);
+                /* Slightly increase size on hover */
+                box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
+                /* Shadow on hover for depth */
+            }
+
+            .nav-links.show {
+                display: flex;
+                /* Show nav links when hamburger is clicked */
+            }
+
+            .hamburger {
+                display: block;
+                /* Show hamburger on mobile */
+            }
 
 .nav-links.active {
     display: flex;
@@ -503,7 +550,7 @@ nav {
          <footer>
         <div class="footer-content">
             <p>Contact Us: <a href="mailto:info@example.com">inscribe@gmail.com</a></p>
-            <p>Since 2011</p>
+          
         </div>
         <div class="footer-bottom">
             <p>&copy; 2011 The Inscribeco. All rights reserved.</p>
