--- a/services.html
+++ b/services.html
@@ -381,14 +381,13 @@ You said:
 
             /* Hover effects */
             .nav-links a:hover {
-                background-color: #1f6396;
+                background-color: BLUE;
                 /* Darker hover color */
-                color: #ecf0f1;
+                color: BLUE;
                 /* Lighter text on hover */
                 transform: scale(1.05);
                 /* Slightly increase size on hover */
-                box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
-                /* Shadow on hover for depth */
+           
             }
 
             .nav-links.show {
