--- a/services.html
+++ b/services.html
@@ -360,9 +360,9 @@ You said:
                 /* Increased padding for larger clickable area */
                 margin: 0.5rem 0;
                 /* Slight margin to separate buttons */
-                background-color: #2980b9;
+                /* background-color: #2980b9;
                 /* Background color for links */
-                border-radius: 5px;
+               /* border-radius: 5px;
                 /* Subtle rounding for links */
                 font-size: 1.25rem;
                 /* Reasonable font size for readability */
@@ -375,7 +375,7 @@ You said:
                 /* Smooth transitions */
                 width: calc(100% - 1rem);
                 /* Make buttons full width minus margin */
-                box-sizing: border-box;
+               /* box-sizing: border-box;
                 /* Include padding and border in element's total width */
             }
 
