--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
         .sentence {
             font-size: 2rem;
-            color: #2c3e50;
+            color: white;
             position: relative;
             display: inline-block;
         }
@@ -699,7 +699,7 @@
                  <div class="sentence">
         Your one stop for  
           <span class="changing-words"></span>
-              </div>
+              </div><br>
                 <button id="learnMoreButton" class="learn-more-button">Learn More</button>
             </div>
         </section>
