--- a/index.html
+++ b/index.html
@@ -29,11 +29,13 @@
             color: white;
             position: relative;
             display: inline-block;
+            font-family: Arial, sans-serif;
+    font-weight: bold; /* or 700 for bold */
         }
 
         .changing-words::after {
             content: '|';
-            animation: blink 0.7s step-end infinite;
+            animation: blink 0.9s step-end infinite;
             font-weight: normal;
             margin-left: 5px;
         }
@@ -150,8 +152,10 @@
         }
 
         .hero h1 {
-            font-size: 2rem;
-            color: Dark blue
+            font-size: 3rem;
+            color: Dark blue;
+            font-family: Arial, sans-serif;
+    font-weight: bold; /* or 700 for bold */
         }
 
         .hero p {
