--- a/index.html
+++ b/index.html
@@ -581,6 +581,8 @@
             }
 
             .nav-links a {
+
+                font-size: 13px; /* Set font size to 13px */
                 padding: 1rem;
                 font-size: 1.5rem;
                 text-align: center;
