--- a/index.html
+++ b/index.html
@@ -614,10 +614,10 @@
         color: #ffffff;
         font-size: 1.5rem;
         cursor: pointer;
-        position: absolute;
-        top: 10px;
+        position: fixed; /* Change to fixed to make sure it stays on top */
+        top: 50px; /* Adjust position to be below the top bar */
         right: 15px;
-        z-index: 200;
+        z-index: 2000; /* Increase z-index to be on top of all elements */
         display: block; /* Only show in mobile view */
     }
 
