--- a/index.html
+++ b/index.html
@@ -560,21 +560,21 @@
             }
 
             .nav-links {
-                display: none;
-                flex-direction: column;
-                position: fixed;
-                top: 0;
-                right: 0;
-                left: 0;
-                bottom: 0;
-                background-color: #2c3e50;
-                box-shadow: 0 4px 20px rgba(0, 0, 0, 0.5);
-                z-index: 100;
-                padding: 2rem;
-                transition: all 0.3s ease;
-                contain: content;
-                overflow-y: auto;
-            }
+        display: none;
+        flex-direction: column;
+        position: fixed;
+        top: 0;
+        right: 0;
+        left: 0;
+        bottom: 0;
+        background-color: rgba(44, 62, 80, 0.9); /* Dark background with 90% opacity */
+        box-shadow: 0 4px 20px rgba(0, 0, 0, 0.5);
+        z-index: 100;
+        padding: 2rem;
+        transition: all 0.3s ease;
+        contain: content;
+        overflow-y: auto;
+    }
 
             .nav-links li {
                 display: block;
