--- a/index.html
+++ b/index.html
@@ -160,7 +160,8 @@
 }
 
 .sentence {
-    font-size: 1.5rem; /* Reduced from 1.75rem */
+    font-family: 'Olive Village', sans-serif;
+    font-size: 1.75rem; /* Reduced from 1.75rem */
     color: #ffffff;
     font-family: 'Poppins', sans-serif;
     font-weight: 600;
@@ -701,6 +702,7 @@
             }
         }
     </style>
+    <link rel="stylesheet" href="https://example.com/path/to/olive-village.css">
      <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Roboto:wght@700&display=swap" rel="stylesheet">
