--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         .logo img {
             height: 50px;
             border-radius: 50%;
-            border: 3px solid rgba(0, 123, 255, 0.6);
+            border: 3px solid #00008B ;
             padding: 5px;
             background-color: rgba(245, 245, 245, 0.863);
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
