--- a/index.html
+++ b/index.html
@@ -25,6 +25,15 @@
             backdrop-filter: blur(50px);
         }
 
+        @font-face {
+    font-family: 'Olive Village';
+    src: url('fonts/OliveVillage.woff2') format('woff2'),
+         url('fonts/OliveVillage.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
+
         
 
     
@@ -163,7 +172,6 @@
     font-family: 'Olive Village', sans-serif;
     font-size: 1.75rem; /* Reduced from 1.75rem */
     color: #ffffff;
-    font-family: 'Poppins', sans-serif;
     font-weight: 600;
     margin-top: 1rem;
 }
