--- a/index.html
+++ b/index.html
@@ -25,13 +25,7 @@
             backdrop-filter: blur(50px);
         }
 
-        @font-face {
-    font-family: 'Olive Village';
-    src: url('fonts/OliveVillage.woff2') format('woff2'),
-         url('fonts/OliveVillage.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-}
+
 
 
         
@@ -161,6 +155,7 @@
 }
 
 .hero h1 {
+    font-style: italic;
     font-size: 2rem; /* Reduced from 2.5rem */
     color: #ffffff;
     font-family: 'Poppins', sans-serif;
@@ -169,8 +164,8 @@
 }
 
 .sentence {
-    font-family: 'Olive Village', sans-serif;
-    font-size: 1.75rem; /* Reduced from 1.75rem */
+    
+    font-size: 1.50rem; /* Reduced from 1.75rem */
     color: #ffffff;
     font-weight: 600;
     margin-top: 1rem;
@@ -710,7 +705,7 @@
             }
         }
     </style>
-    <link rel="stylesheet" href="https://example.com/path/to/olive-village.css">
+  
      <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Roboto:wght@700&display=swap" rel="stylesheet">
