--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 }
 
 .hero h1 {
-    font-style: italic;
+     font-family: cursive;
     font-size: 2rem; /* Reduced from 2.5rem */
     color: #ffffff;
     font-family: 'Poppins', sans-serif;
