--- a/index.html
+++ b/index.html
@@ -155,11 +155,11 @@
 }
 
 .hero h1 {
-     font-family: cursive;
-    font-size: 2rem; /* Reduced from 2.5rem */
-    color: #ffffff;
-    font-family: 'Poppins', sans-serif;
-    font-weight: 400;
+     font-family: 'Great Vibes', cursive; /* or any decorative Google Font */
+    font-size: 3rem;
+    color: #4a4a4a;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
+    letter-spacing: 1px;
     margin-bottom: 1rem;
 }
 
@@ -705,6 +705,10 @@
             }
         }
     </style>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
+
   
      <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
