--- a/index.html
+++ b/index.html
@@ -589,6 +589,10 @@
 
 
         @media (max-width: 768px) {
+
+              body {
+             overflow-x: hidden;
+        }
             .sample {
                 width: calc(50% - 2rem);
                 /* Two in a row on tablets */
