--- a/index.html
+++ b/index.html
@@ -741,7 +741,7 @@
     <main>
             <section class="hero" id="home">
         <div class="hero-content">
-            <h1>Welcome to The Inscribe.co</h1>
+            <h1>Welcome to the Inscribe.co</h1>
             <div class="sentence">
                 Your one stop for
                 <span class="changing-words"></span>
