--- a/index.html
+++ b/index.html
@@ -86,6 +86,9 @@
             padding: 1rem;
             max-width: 1400px;
             margin: auto;
+            background-color: transparent; /* Set background to transparent */
+    backdrop-filter: none; /* Remove any backdrop filter for transparency */
+    box-shadow: none; /* Remove box-shadow for cleaner transparency */
         }
 
         .logo img {
