--- a/index.html
+++ b/index.html
@@ -593,6 +593,19 @@
 
         @media (max-width: 768px) {
 
+             .nav-links {
+        padding: 1rem; /* Reduce padding to fit screen width */
+    }
+
+    .sample {
+        width: 90%; /* Reduce width to prevent overflow */
+        padding: 1rem; /* Reduce padding */
+    }
+
+    .whatsapp-float {
+        right: 10px; /* Adjust position for smaller screens */
+    }
+
           
         
 
