--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         .logo img {
             height: 50px;
             border-radius: 50%;
-            border: 3px solid #00008B ;
+            border: 3px solid #008080 ;
             padding: 5px;
             background-color: rgba(245, 245, 245, 0.863);
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -175,7 +175,7 @@
 }
 
 .hero button {
-    background-color: #00008B;
+    background-color: #008080;
     color: white;
     border: none;
     padding: 0.75rem 1.5rem; /* Reduced padding */
@@ -204,9 +204,9 @@
 }
 
         .marquee {
-    background: #00008B;
+    background: #008080;
     color: white;
-    padding: 0.5rem 1rem; /* Adjust padding to prevent overflow */
+    padding: 0.75rem 1rem; /* Increased padding to increase height */
     font-size: 12px;
     font-weight: 400;
     font-family: 'Roboto', sans-serif;
